--- a/web/static/index.html
+++ b/web/static/index.html
@@ -17,7 +17,7 @@
 <div ng-controller="shopform">
     <h1><a href="/">Stan's Robot Shop</a></h1>
     <span id="stan">
-        <img src="/media/stan.png"/>
+        <img src="https://i.imgur.com/BNuMYPY.png"/>
     </span>
     <span id="search">
         <form>
