--- a/web/static/index.html
+++ b/web/static/index.html
@@ -58,6 +58,10 @@
 
     <div class="footer">
         {{ data.uniqueid }}
+	<br>
+	<center>
+		&copy;Jim Harris 05JAN2022 - Cycode Technical Assignement - Step 14
+	</center>
     </div>
 
 </div>
